--- a/src/confd/confd.toml
+++ b/src/confd/confd.toml
@@ -1,10 +1,8 @@
 backend = "etcd"
 confdir = "/etc/confd"
-debug = false
 interval = 10
 nodes = [
-  "http://127.0.0.1:4001",
+  "http://172.17.8.101:4001",
 ]
 watch = true
-quiet = true
-verbose = false
+log-level="debug"
