--- a/example/nginx_svc.json
+++ b/example/nginx_svc.json
@@ -8,6 +8,6 @@
     "name": "my-nginx"
   },
   "annotations": {
-    "kubernetesReverseproxy":"{\"hosts\": [{\"host\": \"dedalus.test\", \"port\": \"port number\"}]}"
+    "kubernetesReverseproxy":"{\"hosts\": [{\"host\": \"dedalus.test\", \"port\": \"80\"}]}"
   }
 }
